lib/tests/fixtures/compiler/evaluation/type_not_defined.pp
type A = B
type B = C
type C = Variant[D, E]
type D = Integer
type E = NotDefined

notice 0 =~ A
